# home_automato_client

./: Cargo.toml  README.md  package-lock.json
src/: client.rs  lib.rs  main.rs
